// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A few items 1`] = `
HTMLCollection [
  <aside
    class="s-4nVDVOrf1Uux"
    style="left: 25%; top: 25%; --size: 130px; animation: __svelte_1296847330_0 0ms linear 0ms 1 both;"
  >
    <ul
      class="s-4nVDVOrf1Uux"
      role="menu"
    >
      <li
        class="s-4nVDVOrf1Uux"
        style="animation: __svelte_650708873_0 0ms linear 0ms 1 both;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              home
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-4nVDVOrf1Uux"
        style="animation: __svelte_3958401901_0 0ms linear 0ms 1 both;"
      >
        <button
          class="s-NMyTiX1zi6rz"
          secondary="true"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              settings
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
    </ul>
     
  </aside>,
  <button
    class="has-text s-NMyTiX1zi6rz"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      
      <span
        class="text s-NMyTiX1zi6rz"
      >
        Close
      </span>
      
    </div>
     
  </button>,
]
`;

exports[`More items 1`] = `
HTMLCollection [
  <aside
    class="s-4nVDVOrf1Uux"
    style="left: 25%; top: 25%; --size: 180px;"
  >
    <ul
      class="s-4nVDVOrf1Uux"
      role="menu"
    >
      <li
        class="s-4nVDVOrf1Uux"
        style="opacity: 1; left: 90.00000000000001px; top: 0px;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              home
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-4nVDVOrf1Uux"
        style="opacity: 1; left: 160.3648334221227px; top: 33.885917832714px;"
      >
        <button
          class="s-NMyTiX1zi6rz"
          secondary="true"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              settings
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-4nVDVOrf1Uux"
        style="opacity: 1; left: 177.74351209636413px; top: 110.02688405606831px;"
      >
        <button
          class="s-NMyTiX1zi6rz"
          secondary="true"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              face
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-4nVDVOrf1Uux"
        style="opacity: 1; left: 129.04953652058023px; top: 171.08719811121773px;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              lock
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-4nVDVOrf1Uux"
        style="opacity: 1; left: 50.95046347941975px; top: 171.0871981112177px;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              flip
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-4nVDVOrf1Uux"
        style="opacity: 1; left: 2.2564879036358745px; top: 110.0268840560683px;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              shuffle
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
      <li
        class="s-4nVDVOrf1Uux"
        style="opacity: 1; left: 19.635166577877328px; top: 33.88591783271398px;"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              rotate_left
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
      </li>
    </ul>
     
  </aside>,
  <button
    class="has-text s-NMyTiX1zi6rz"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      
      <span
        class="text s-NMyTiX1zi6rz"
      >
        Close
      </span>
      
    </div>
     
  </button>,
]
`;

exports[`No items 1`] = `
HTMLCollection [
  <aside
    class="s-4nVDVOrf1Uux"
    style="left: 25%; top: 25%; --size: 110px; animation: __svelte_1296847330_0 0ms linear 0ms 1 both;"
  >
    <span
      class="no-actions s-4nVDVOrf1Uux"
      role="menu"
      style="animation: __svelte_1296847330_0 0ms linear 0ms 1 both;"
    >
      Aucune action
    </span>
     
  </aside>,
  <button
    class="has-text s-NMyTiX1zi6rz"
  >
    <div
      class="s-NMyTiX1zi6rz"
    >
      
      <span
        class="text s-NMyTiX1zi6rz"
      >
        Close
      </span>
      
    </div>
     
  </button>,
]
`;
